--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.3
 backports.zoneinfo==0.2.1
 Django==3.0.1
 django-allauth==0.41.0
+django-countries==7.2.1
 django-crispy-forms==1.13.0
 oauthlib==3.1.0
 Pillow==8.4.0
@@ -9,3 +10,4 @@ python3-openid==3.1.0
 pytz==2021.3
 requests-oauthlib==1.3.0
 sqlparse==0.3.0
+stripe==2.64.0
