--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.2.3
 backports.zoneinfo==0.2.1
+boto3==1.20.36
+botocore==1.23.36
 dj-database-url==0.5.0
 Django==3.0.1
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+django-storages==1.12.3
 gunicorn==20.1.0
+jmespath==0.10.0
 oauthlib==3.1.0
 Pillow==8.4.0
 psycopg2-binary==2.8.6
 python3-openid==3.1.0
 pytz==2021.3
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
 sqlparse==0.3.0
 stripe==2.64.0
